--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "env PORT=3000 nodemon server.js",
     "start": "node server.js",
+    "watch": "node --watch server.js",
     "deploy": "webservice --backend kubernetes node10 restart",
     "logs": "kubectl logs -f $(kubectl get pods | tail -1 | cut -d ' ' -f 1)"
   },
@@ -17,9 +18,20 @@
   "license": "MIT",
   "homepage": "",
   "dependencies": {
-    "express": "^4.17.1",
+    "bcryptjs": "^3.0.2",
+    "connect-mongo": "^5.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "express-mysql-session": "^3.0.3",
+    "express-session": "^1.18.2",
+    "jsdom": "^27.0.0",
+    "mongoose": "^8.19.0",
     "mwn": "^0.11.0",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-mediawiki-oauth": "^0.1.0",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "eslint": "^7.27.0",
